--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
   "dependencies": {
     "next": "latest",
     "next-pwa": "^5.6.0",
+    "openai": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.5.4"
   }
 }
